--- a/src/app/modules/governance/tabs/tabs.component.html
+++ b/src/app/modules/governance/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<div class="m-tabs__container" *ngIf="isDetailScreen()">
+<div class="m-tabs__container">
   <ng-container>
     <div class="m-tabs__tab">
       <a
