--- a/src/app/modules/governance/filter-selector/filter-selector.component.html
+++ b/src/app/modules/governance/filter-selector/filter-selector.component.html
@@ -1,4 +1,4 @@
-<div class="mdl-cell mdl-cell--12-col">
+<div class="m-governance-filter-container">
   <m-dropdown #dropdown>
     <label i18n="@@HELPDESK__EDIT__CATEGORIES__TITLE">
       {{ filter === '' ? 'All' : filter }} 
