--- a/src/app/modules/governance/filter-selector/filter-selector.component.scss
+++ b/src/app/modules/governance/filter-selector/filter-selector.component.scss
@@ -1,6 +1,5 @@
 m-governance--filter-selector {
   margin-right: 7px;
-  .mdl-cell {
     label {
       cursor: pointer;
       font-size: 16px;
@@ -8,6 +7,8 @@ m-governance--filter-selector {
       span {
         text-transform: none;
       }
-    }
+  }
+  .m-governance-filter-container {
+    margin-top: 20px;
   }
 }
