--- a/src/app/modules/governance/latest/latest.component.scss
+++ b/src/app/modules/governance/latest/latest.component.scss
@@ -13,9 +13,19 @@
   }
 }
 
+.m-governance--latest-row {
+  display: flex;
+  align-items: flex-start;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
 .m-governance-button {
   border: 1px solid;
   padding: 8px 16px;
+  margin-right: 22px;
   font-size: 16px;
   border-radius: 21px;
   min-width: 139px;
@@ -23,10 +33,35 @@
   cursor: pointer;
   @include m-theme() {
     border-color: themed($m-blue);
+    background-color: themed($m-bgColor--primary);
+    color: themed($m-textColor--primary);
   }
-  &:hover {
-    @include m-theme() {
-      background-color: themed($m-bgColor--btnHover);
+  &:not(:disabled) {
+    &:hover {
+      @include m-theme() {
+        background-color: themed($m-bgColor--btnHover);
+      }
     }
   }
+  &:disabled {
+    @include m-theme() {
+      background-color: themed($m-bgColor--primary);
+    }
+    color: darkgray;
+    cursor: default;
+    @include m-theme() {
+      border-color: themed($m-borderColor--primary);
+    }
+  }
+}
+
+.m-governance--filter-type-title {
+  @include m-theme() {
+    color: themed($m-textColor--secondary);
+  }
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1.25px;
+  margin-bottom: 14px;
+  margin-top: 20px;
 }
