--- a/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-phone/verify-phone.component.ng.scss
+++ b/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-phone/verify-phone.component.ng.scss
@@ -55,6 +55,7 @@
         margin-bottom: 0 !important;
 
         @include m-theme() {
+          background-color: themed($m-bgColor--primary);
           color: themed($m-textColor--primary);
           border: 1px solid themed($m-borderColor--primary);
 
