--- a/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
+++ b/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-uniqueness.component.html
@@ -2,9 +2,9 @@
   class="m-onboardingUniqueness__headerSpan"
   i18n="@@ONBOARDING_VERIFY_UNIQUENESS__HEADING"
 >
-  Before you can start earning tokens, it is important that we can simply verify
-  your uniqueness. The less tokens spammers take, the more that are left for
-  you! To learn about how we keep your data private,
+  Before you can start earning tokens, it is important that we verify your
+  uniqueness. We do not store your phone number ever. To learn more about how we
+  keep your data private,
   <a [href]="'/p/privacy'" target="_blank">click here</a>.</span
 >
 <!--TODO: Link to a seperate /p/ page for data handling -->
