--- a/src/app/modules/governance/proposal-list/proposal-list.component.html
+++ b/src/app/modules/governance/proposal-list/proposal-list.component.html
@@ -1,5 +1,6 @@
 <div class="m-governance__card">
   <m-governance__card
+    [space]="space"
     *ngFor="let item of proposals"
     [showHeader]="false"
     [proposal]="item"
