--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -85,7 +85,7 @@
       <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
-        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLinkActiveOptions]="{ exact: !plusPageActive }"
         *mIfFeature="'nav-plus-2020'"
       >
         <a routerLink="/discovery/plus" (click)="toggle()">
