Fix async issue in status update

--- a/src/app/common/components/status-toaster/status-toaster.component.ng.scss
+++ b/src/app/common/components/status-toaster/status-toaster.component.ng.scss
@@ -81,7 +81,7 @@
   }
   .m-statusToastDetails__title {
     font-size: 17px;
-    line-height: 19px;
+    line-height: 19px !important;
     font-weight: 500;
     margin: 18px 0 10px !important;
   }
