Force pipe re-run

--- a/src/app/modules/report/juryduty/session/content.component.scss
+++ b/src/app/modules/report/juryduty/session/content.component.scss
@@ -84,7 +84,7 @@
   }
 }
 
-// fix images showing as too wide
+// fix images showing as too wide.
 .m-comment-attachment img {
   max-width: 100%;
 }
