--- a/src/app/modules/admin/withdrawals/withdrawals.component.html
+++ b/src/app/modules/admin/withdrawals/withdrawals.component.html
@@ -5,9 +5,7 @@
       >'s withdrawals
     </ng-container>
 
-    <ng-container *ngIf="!user">
-      Pending Withdrawals
-    </ng-container>
+    <ng-container *ngIf="!user"> Pending Withdrawals </ng-container>
   </div>
 
   <div class="m-admin-withdrawals__transactionInputContainer" *ngIf="!user">
@@ -81,7 +79,10 @@
         <div class="m-admin-withdrawalsCardCell__label">Amount</div>
 
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--bolder"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--bolder
+          "
         >
           {{ request.amount | token: 18 | number: '1.0-4' }}
         </div>
@@ -98,7 +99,10 @@
       <div class="m-admin-withdrawalsCard__cell" *ngIf="request.tx">
         <div class="m-admin-withdrawalsCardCell__label">Wallet</div>
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">
             {{ request.user.eth_wallet }}
@@ -115,7 +119,10 @@
       <div class="m-admin-withdrawalsCard__cell" *ngIf="request.tx">
         <div class="m-admin-withdrawalsCardCell__label">Request TX</div>
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">{{ request.tx }}</div>
           <m-admin__txExplorers
@@ -131,7 +138,10 @@
         <div class="m-admin-withdrawalsCardCell__label">Payout TX</div>
 
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">
             {{ request.completed_tx }}
@@ -146,7 +156,9 @@
       </div>
 
       <div
-        class="m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions"
+        class="
+          m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions
+        "
         *ngIf="request.status === 'pending_approval'"
       >
         <div class="m-admin-withdrawalsCardCell__body">
@@ -177,7 +189,9 @@
         </div>
       </div>
       <div
-        class="m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions"
+        class="
+          m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions
+        "
         *ngIf="request.status !== 'pending_approval'"
       >
         <div class="m-admin-withdrawalsCardCell__body">
