--- a/src/app/modules/groups/profile/profile.html
+++ b/src/app/modules/groups/profile/profile.html
@@ -1,14 +1,14 @@
-<div [hidden]="group || error" style="width:100%; text-align:center; ">
+<div [hidden]="group || error" style="width: 100%; text-align: center">
   <div
     class="mdl-spinner mdl-js-spinner is-active"
     [mdl]
-    style="margin: 16px auto;"
+    style="margin: 16px auto"
   ></div>
 </div>
 
 <div class="m-pageLayout__container" *ngIf="error && !group">
   <m-errorSplash class="m-pageLayout__container"></m-errorSplash>
-  <div class="m-pageLayout__pane--right"> <!-- Spacer --> </div>
+  <div class="m-pageLayout__pane--right"><!-- Spacer --></div>
 </div>
 
 <m-explicit-overlay
@@ -71,7 +71,11 @@
 
         <!-- Name -->
         <div
-          class="m-groupInfo__name m-group-info-name mdl-color-text--blue-grey-800"
+          class="
+            m-groupInfo__name
+            m-group-info-name
+            mdl-color-text--blue-grey-800
+          "
         >
           <div [hidden]="editing || !group.name">
             <h1>
@@ -90,7 +94,7 @@
               >
               </minds-groups-join-button>
               <m-button
-                style="margin-left: 8;"
+                style="margin-left: 8"
                 (onAction)="videochat.activate(group)"
                 *ngIf="!group.videoChatDisabled && group['is:member']"
                 size="small"
