Change withdraw modal text

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
@@ -159,9 +159,8 @@
           i18n="@@WALLETV2_ONCHAIN_TRANSFER__GAS_FEE_NOTE"
           *ngIf="ethBalance > 0"
         >
-          Note: a small amount of ETH will be charged to cover the transaction
-          fee. Transfers go through an approval process and may take up to 72
-          hours to complete.
+          Note: ETH will be charged to cover the transaction fee. Transfers go
+          through an approval process and may take up to 72 hours to complete.
         </p>
 
         <p
