--- a/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity/toolbar/toolbar.component.html
@@ -76,23 +76,6 @@
   <!-- Show boost if own post -->
   <ng-container *ngIf="session.getLoggedInUser().guid == entity.ownerObj.guid">
     <div class="m-layout__spacer"></div>
-
-    <m-tooltip
-      [anchor]="'bottom'"
-      [enabled]="false"
-      [visible]="(service.showBoostRecommendationForPost$ | async) === entity.guid"
-      [showArrow]="true">
-      <button
-        m-tooltip--anchor
-        class="m-btn m-btn--slim m-boostButton"
-        (click)="openBoostModal($event)"
-        data-cy="data-minds-activity-boost-button"
-      >
-        <span i18n="verb|@@M__ACTION__BOOST">Boost</span>
-        <m-icon from="md" iconId="trending_up" [sizeFactor]="20"></m-icon>
-      </button>
-
-      <ng-container i18n="@@M__ACTION__BOOST__TOOLTIP">Use your tokens to get more views</ng-container>
-    </m-tooltip>
+    <m-activity__boostButton [object]="entity" (click)="openBoostModal($event)"></m-activity__boostButton>
   </ng-container>
 </div>
